src/test/compile-fail/binop-logic-int.rs
// xfail-stage0
// error-pattern:&& cannot be applied to type `int`

fn main() { let x = 1 && 2; }